crates/kply-cli/tests/snapshots/cli__command_group_report.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
kply report
Command group is defined but behavior is intentionally pending.
