crates/kply-cli/tests/snapshots/cli__command_group_report_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "command": "report",
  "status": "placeholder"
}
