crates/kply-cli/tests/snapshots/cli__command_group_route.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
kply route
Command group is defined but behavior is intentionally pending.
