crates/kply-cli/tests/snapshots/cli__command_group_route_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "command": "route",
  "status": "placeholder"
}
