crates/kply-cli/tests/snapshots/cli__command_group_session.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
kply session
Command group is defined but behavior is intentionally pending.
