crates/kply-cli/tests/snapshots/cli__command_group_session_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "command": "session",
  "status": "placeholder"
}
