crates/kply-cli/tests/snapshots/cli__config_path_with_no_config_usage_error.snap
---
source: crates/kply-cli/tests/cli.rs
expression: stderr
---
kply error: usage

error: the argument '--config <PATH>' cannot be used with '--no-config'

Usage: kply --config <PATH>

For more information, try '--help'.
