crates/kply-cli/tests/snapshots/cli__config_show_json.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 151
expression: value
---
{
  "apps": [],
  "checks": [],
  "policies": [],
  "routing": {},
  "version": 1
}
