crates/kply-cli/tests/snapshots/cli__config_validate_invalid_json.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 263
expression: value
---
{
  "errors": [
    "apps[0].namespace: field is required"
  ],
  "status": "invalid"
}
