crates/kply-cli/tests/snapshots/cli__config_validate_invalid_json_quiet.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "errors": [
    "apps[0].namespace: field is required"
  ],
  "status": "invalid"
}
